[gd_scene load_steps=19 format=2]

[ext_resource path="res://boss assests/new_spatialmaterial.tres" type="Material" id=1]
[ext_resource path="res://boss assests/new_cubemesh.tres" type="CubeMesh" id=2]
[ext_resource path="res://boss assests/boss.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.992157, 1, 0, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2, 1, 1 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.0156863, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("right2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 45 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("right3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -45 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("left:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("left2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 135 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("left3:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -45, 45, -135 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "attack1"
tracks/0/type = "value"
tracks/0/path = NodePath("right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "attack2"
tracks/0/type = "value"
tracks/0/path = NodePath("right2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 45 ), Vector3( 90, -90, 45 ), Vector3( 0, 0, 45 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "attack3"
tracks/0/type = "value"
tracks/0/path = NodePath("right3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -45 ), Vector3( -90, -90, -45 ), Vector3( 0, 0, -45 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "attack4"
tracks/0/type = "value"
tracks/0/path = NodePath("left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ), Vector3( 0, 90, 180 ), Vector3( 0, 0, 180 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "attack5"
tracks/0/type = "value"
tracks/0/path = NodePath("left2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 135 ), Vector3( 90, 90, 135 ), Vector3( 0, 0, 135 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "attack6"
tracks/0/type = "value"
tracks/0/path = NodePath("left3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -135 ), Vector3( -90, 90, -135 ), Vector3( 0, 0, -135 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.0156863, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.0156863, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.0156863, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.0156863, 1, 1 ) ]
}

[node name="boss" type="Area"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="eye2" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.5, 0, 1 )
mesh = SubResource( 1 )
skeleton = NodePath("../eye1")
material/0 = SubResource( 2 )

[node name="eye1" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.5, 0, 1 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="right" type="Spatial" parent="."]

[node name="r1" type="Area" parent="right"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="right/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="right"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="right/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="right"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="right/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="right"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="right/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="right"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="right/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="right"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="right/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right/r6"]
shape = SubResource( 6 )

[node name="right2" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, 0, 0 )

[node name="r1" type="Area" parent="right2"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="right2"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="right2"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="right2"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="right2"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="right2"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="right2/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right2/r6"]
shape = SubResource( 6 )

[node name="right3" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, 0, 0 )

[node name="r1" type="Area" parent="right3"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="right3"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="right3"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="right3"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="right3"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="right3"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="right3/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="right3/r6"]
shape = SubResource( 6 )

[node name="left" type="Spatial" parent="."]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="r1" type="Area" parent="left"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="left/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="left"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="left/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="left"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="left/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="left"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="left/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="left"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="left/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="left"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="left/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left/r6"]
shape = SubResource( 6 )

[node name="left2" type="Spatial" parent="."]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 0, 0, 0 )

[node name="r1" type="Area" parent="left2"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="left2"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="left2"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="left2"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="left2"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="left2"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="left2/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left2/r6"]
shape = SubResource( 6 )

[node name="left3" type="Spatial" parent="."]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, 0, 0, 0 )

[node name="r1" type="Area" parent="left3"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 5, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r1"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r1"]
shape = SubResource( 6 )

[node name="r2" type="Area" parent="left3"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r2"]
shape = SubResource( 6 )

[node name="r3" type="Area" parent="left3"]
transform = Transform( 1.93185, 0, -0.258819, 0, 1, 0, 0.517638, 0, 0.965926, 15, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r3"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r3"]
shape = SubResource( 6 )

[node name="r4" type="Area" parent="left3"]
transform = Transform( 1, 0, -0.866025, 0, 1, 0, 1.73205, 0, 0.5, 19, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r4"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r4"]
shape = SubResource( 6 )

[node name="r5" type="Area" parent="left3"]
transform = Transform( -0.517638, 0, -0.965926, 0, 1, 0, 1.93185, 0, -0.258819, 20, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r5"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r5"]
shape = SubResource( 6 )

[node name="r6" type="Area" parent="left3"]
transform = Transform( 1.73205, 0, 0.5, 0, 1, 0, -1, 0, 0.866025, 17, 0, 10 )

[node name="MeshInstance" type="MeshInstance" parent="left3/r6"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="left3/r6"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 7 )
anims/attack1 = SubResource( 9 )
anims/attack2 = SubResource( 10 )
anims/attack3 = SubResource( 11 )
anims/attack4 = SubResource( 12 )
anims/attack5 = SubResource( 13 )
anims/attack6 = SubResource( 14 )
anims/hit = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="hit" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 15 )

[connection signal="body_entered" from="." to="." method="_on_boss_body_entered"]
[connection signal="body_entered" from="right/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right/r6" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right2/r6" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="right3/r6" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left/r6" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left2/r6" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r1" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r2" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r3" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r4" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r5" to="." method="_on_r1_body_entered"]
[connection signal="body_entered" from="left3/r6" to="." method="_on_r1_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
